# ANPR_bind

./: Cargo.toml  build.rs
lib/x64/: iANPR_vc14_x64.lib  iANPRcapture_vc14_x64.lib  iANPRinterface_vc14_x64.lib
lib/x86/: iANPR_vc14_x86.lib  iANPRcapture_vc14_x86.lib  iANPRinterface_vc14_x86.lib
src/: lib.rs
